[tool.poetry]
name = "sitescrapper"
version = "0.1.0"
description = ""
authors = ["Roy Ben Yosef <roy.benyosef@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tinydb = "^4.1.1"
scrapy = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
